removed overlay on gallery images when on mobile, preventing necessity of 'double-clicking' on Safari iOS

--- a/src/styles/Lightbox.scss
+++ b/src/styles/Lightbox.scss
@@ -49,11 +49,13 @@
     }
 
     &:hover {
-      img {
-        filter: blur(4px);
-      }
-      a {
-        opacity: 1;
+      @media (min-width: 768px) {
+        img {
+          filter: blur(4px);
+        }
+        a {
+          opacity: 1;
+        }
       }
     }
 
